--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
-name: Hank Quinlan, Horrible Cop
+name: Dawn Test Code, Software Test Evangelist
 markdown: kramdown
+permalink: /blog/:year/:month/:day/:title
