--- a/_config.yml
+++ b/_config.yml
@@ -1,21 +1,22 @@
 # Jekyll configuration
 
-name: Blog Name
-description: Software Developer
+name: Dawn Test Code's Blog
+description: Software Test Evangelist
 
 # Url is currently only used only for the RSS feed in feed.xml
-url: http://streetturtle.github.io
+url: http://dawntestcode.github.io
 #url: http://localhost:4000
 
 # For a project page here should be a project name. Otherwise (for user's/organizaion's page leave it empty)
 baseurl: '/jekyll-clean-dark'
 
 social:
-  github: streetturtle
+  github: dawntestcode
   stackoverflow: ''
-  linkedin:
+  linkedin: dawncode
   instagram: ''
   lastfm: ''
+  twitter: dckismet
   rss: feed.xml
 
 # Google Analytics key, leave blank to ignore
@@ -27,8 +28,8 @@ yandex_metrica:
 # Set this to your disqus shortname to enable comments. Note that the 'comments'
 # setting below must also be true. Individual posts can override 'comments' to
 # disable on a post-by-post basis
-disqus: streetturtle
-comments: false
+disqus: dawncode
+comments: true
 
 permalink: /:year/:month/:title
 
