--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Jekyll configuration
 
-name: Dawn Test Code's Blog
+name: Dawn Test Code
 description: Software Test Evangelist
 
 # Url is currently only used only for the RSS feed in feed.xml
