Adding tags to a bunch of blog posts

--- a/_config.yml
+++ b/_config.yml
@@ -15,12 +15,14 @@ social:
   linkedin: dawncode
   twitter: dckismet
   rss: feed.xml
-  
+
 tags:
   automation
   agile
   exploratory
   testing
+  random
+  writing
 
 # Google Analytics key, leave blank to ignore
 google_analytics_key:
