--- a/_config.yml
+++ b/_config.yml
@@ -37,6 +37,7 @@ disqus: dawncode
 comments: true
 
 permalink: /:year/:month/:title
+relative_permalinks: false
 
 # Enable for using pages, more details are here: http://jekyllrb.com/docs/pagination/
 #paginate: 3
